--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,6 @@
 
 @layer components {
   .header-btn {
-    @apply p-4 m-2 text-2xl rounded-2xl hover:bg-sleuthe-yellow hover:text-white transition-colors duration-300 ease-in-out;
+    @apply p-4 m-2 text-xl rounded-2xl hover:bg-sleuthe-yellow hover:text-white transition-colors duration-300 ease-in-out;
   }
 }
